2004-04-27  Dominique Devriese  <devriese@kde.org>

	* Fix a stupid bug in the last commit which caused Kig to crash on
	older Kig files.

	* Make it possible to switch the radical lines of a conic that are
	shown.

2004-04-24  Dominique Devriese  <devriese@kde.org>

	* Add a vector sum object.

	* Move VectorType from other_type.* into vector_type.*.

	* Fix a bug where some objects were not preliminarily drawn
	correctly.

2004-04-23  Dominique Devriese  <devriese@kde.org>

	* Add a segment-midpoint icon from Julien Narboux
	<Julien.Narboux@inria.fr>.

	* Implement a scheme that automatically instantiates the singleton
	ObjectType's.  Now, the ObjectType constructor now adds itself to
	ObjectTypeFactory, so that we cannot forget to do it.  This fixes
	loading of files containing property test objects.

	* Remove the old code that removed $appdata/kig-types/*.kigt on
	exit, as it's not necessary anymore.

2004-04-22  Dominique Devriese  <devriese@kde.org>

	* Add a "opposite vector" property to VectorImp.

2004-04-21  Pino Toscano <toscano.pino@tiscali.it>

       * Add a SameDistanceType, to check whether a point have the same
       distance from a second point and from a third point.

2004-04-21  Dominique Devriese  <devriese@kde.org>

	* Fix tooltips to not contain "&&" instead of "&" ( closes: 78411 ).

2004-04-20  Dominique Devriese  <devriese@kde.org>

	* Various i18n'able string fixes.

	* Add some documentation to the functions in misc/conic-common.h

	* Rename "Cubic" to "Cubic Curve", as discussed with Maurizio
	Paolini and Jaap Woldringh.

	* Save and load line and point styles in the native format.  Most
	of the code comes from Pino.

2004-04-19  Pino Toscano <toscano.pino@tiscali.it>

	* More work in Dr. Geo filter.

	* A new cool (I hope :) ) icon for Python Script.

	* Some various improvements.

2004-04-17  Dominique Devriese  <devriese@kde.org>

	* Fix the calculation of the rectangle containing the entire